LPD-67952 finish POC