@@ -4,7 +4,7 @@ pushd "%~dp0"
 
 path %PATH%;%JAVA_HOME%\bin
 
-java -jar com.liferay.portal.tools.db.upgrade.client.jar %*
+java --add-opens java.base/java.lang=ALL-UNNAMED -jar com.liferay.portal.tools.db.upgrade.client.jar %*
 
 popd
 
